# telegram-bot-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  build_container.sh  docker-compose.yml  example-config.toml  pyproject.toml  pyrightconfig.json  run_container.sh
alembic/: env.py
alembic/versions/: ec262a6b1e0b_initial.py
bot_template/: __init__.py  __main__.py
bot_template/core/: __init__.py
bot_template/core/config_manager/: __init__.py
bot_template/core/config_manager/providers/: __init__.py  base.py  ini_provider.py  toml_provider.py
bot_template/core/config_manager/types/exceptions/: __init__.py  feature_unavailable.py  invalid_type.py
bot_template/core/loader/: __init__.py
bot_template/core/task_manager/: __init__.py
bot_template/core/task_manager/core/: __init__.py  base.py
bot_template/core/task_manager/scheduler/: __init__.py  base.py
bot_template/database/: __init__.py  database.py  models.py
bot_template/database/exceptions/: __init__.py
bot_template/database/extensions/: __init__.py  mutable_list.py
bot_template/database/utils/: __init__.py  mixins.py
bot_template/filters/: is_admin.py  is_chat_admin.py
bot_template/keyboards/: __init__.py  loader.py
bot_template/keyboards/database/: database.py  models.py
bot_template/keyboards/filters/: data_filter.py
bot_template/keyboards/middlewares/: __init__.py  resolve_button.py
bot_template/keyboards/models/: __init__.py  base.py  bottom_keyboard.py  inline_keyboard.py  multi_keyboard.py
bot_template/keyboards/utils/: __init__.py  converter.py  mixins.py  payment.py
bot_template/keyboards/utils/backports/: aiogram_inline_keyboard_button.py  aiogram_switch_inline_query_chosen_chat.py
bot_template/middlewares/: database_inject.py  database_user_inject.py  logging.py  sentry_integration.py  throttling.py
bot_template/modules/: _internal.py  admin.py  start.py
bot_template/states/: __init__.py
bot_template/utils/: __init__.py  async_tools.py  datetime_tools.py
tests/: conftest.py  e-config.ini  e-config.toml
tests/func/: test_async_tools.py  test_core_task.py
tests/unit/: test_config_manager.py  test_keyboards.py  test_td_format.py
